# BookingAsistant

./: .env  .env.example  .gitignore  README.md  atlas.py  aviasales.py  config.py  main.py  manager_bot.py  parser.py  pyproject.toml  requirements.txt  slot_editor.py  state_storage.py  storage.py  trips.db  utils.py
src/bookingassistant/: __init__.py  atlas.py  config.py  gpt.py  iam.py  main.py  manager_bot.py  maps.py  models.py  parser.py  slot_editor.py  state_storage.py  storage.py  texts.py  utils.py
src/bookingassistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bookingassistant/prompts/: __init__.py  base.txt  base_prompt.txt  complete_prompt_template.txt  complete_slots.txt  confirm.txt  confirm_prompt.txt  fallback.txt  fallback_prompt.txt  history.txt  (+10 more)
src/tests/: conftest.py  test_atlas_aiohttp.py  test_autofill.py  test_commands.py  test_complete_slots_prompt.py  test_date_utils.py  test_extract_json.py  test_greeting_once_per_day.py  test_iam_token_manager.py  test_low_confidence.py  test_manager_bot.py  test_notify_manager.py  test_null_confidence.py  test_parse_slots_prompt.py  test_parser_pydantic.py  test_parser_utils.py  test_pre_extract.py  test_pre_extract_slots.py  test_questions.py  test_slot_editor.py  test_state_storage_persistence.py  test_storage.py  test_time_utils.py  test_transport.py  test_unknown_city.py
tests/: test_atlas_aiohttp.py  test_commands.py  test_date_utils.py  test_manager_bot.py  test_notify_manager.py  test_state_storage_persistence.py  test_storage.py  test_time_utils.py  test_transport.py
