[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bookingassistant"
version = "0.1.0"
dependencies = [
    "aiogram",
    "python-dotenv",
    "dateparser",
    "aiohttp",
    "aioresponses",
    "pytest-asyncio",
    "asyncpg",
    "SQLAlchemy>=2",
    "fpdf2",
    "certifi",
    "pydantic",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
